@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added helpers for automake and aclocal (gh#14)
 
 0.17      2022-04-03 06:34:22 -0600
   - Disable makeinfo documentation generation for share install (gh#11, gh#12)
